# AurFlow

./: Cargo.toml  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  prometheus.yml  providers.json
ops/alertmanager/: alertmanager.yml
ops/alerts/: orlb-alerts.yaml
ops/grafana/: orlb-dashboard.json
ops/grafana/dashboards/: orlb-dashboard.json
ops/grafana/provisioning/dashboards/: orlb.yaml
ops/grafana/provisioning/datasources/: prometheus.yaml
scripts/: smoke.sh  stack-info.ps1  stack-info.sh
src/: commitment.rs  config.rs  dashboard.rs  diff.rs  doctor.rs  errors.rs  forward.rs  health.rs  main.rs  metrics.rs  registry.rs  replay.rs  router.rs  secrets.rs  secrets.rs.tmp  telemetry.rs  ws.rs
static/: dashboard.html
