[package]
name = "orlb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.19"
prometheus = "0.13"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
