[package]
name = "orlb"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
futures = "0.3"
anyhow = "1.0"
bytes = "1.6"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.19"
prometheus = "0.13"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
hyper-tungstenite = "0.9"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.31", default-features = false, features = ["trace"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
